add_executable(minimal minimal_example.cpp)
add_executable(comparisons comparisons.cpp)
add_executable(quantities_fn quantities_in_functions.cpp)
add_executable(units_ex units.cpp)
add_executable(quantities quantities.cpp)
add_executable(exprtk_addon exprtk_addon.cpp)

target_link_libraries(minimal PRIVATE units)
target_link_libraries(comparisons PRIVATE units)
target_link_libraries(quantities_fn PRIVATE units)
target_link_libraries(units_ex PRIVATE units)
target_link_libraries(quantities PRIVATE units)
target_link_libraries(exprtk_addon PRIVATE units)
