add_executable(minimal minimal_example.cpp)
add_executable(comparisons comparisons.cpp)
add_executable(quantities_fn quantities_in_functions.cpp)
add_executable(units_ex units.cpp)
add_executable(quantities quantities.cpp)
add_executable(exprtk_addon exprtk_addon.cpp)

target_link_libraries(minimal PRIVATE Units::Units)
target_link_libraries(comparisons PRIVATE Units::Units)
target_link_libraries(quantities_fn PRIVATE Units::Units)
target_link_libraries(units_ex PRIVATE Units::Units)
target_link_libraries(quantities PRIVATE Units::Units)
target_link_libraries(exprtk_addon PRIVATE Units::Units)
